# Guardian

./: .gitignore  AGENTS.md  AppMacOSBundleUserNotificationsToDo.md  AppTrainingMissionSplitToDo.md  BuilderGazeboToDo.md  CesiumJSMapIntegrationReadMe.md  CommandsCatalogueDoc.md  CommandsRecipesToDo.md  GazeboAppWideInstanceToDo.md  GazeboTerrainToDo.md  HandOffToDoList.md  LiveLeafletMapToDo.md  MCSReservePoolMapToDo.md  MRESquadsToDo.md  Makefile  MissionPointsTodo.md  MissionRosterReservesToDo.md  MissionTaskBetweenCyclesToDo.md  NEXTVERSION.md  OperatorCommandsIssuerToDo.md  OperatorPromptsTodo.md  Package.resolved  Package.swift  README.md  README_FULL.md  RosterRolesToDo.md  SITLRandomPortToDo.md  SquadFollow&Formation.md  TODO.md  TaskRosterAssignmentStatesToDo.md  TrainingGazeboSimulationToDo.md  TrainingUnifiedPanelToDo.md  VehicleClassSizeToDo.md  gazebo_procedural_terrain_v1_cursor_prompt.md  main.py  pyproject.toml
Sources/GuardianHQ/Resources/Ros2VehicleBridge/guardian_ros2_vehicle_bridge/: package.xml  requirements-dev.txt  setup.cfg  setup.py
Sources/GuardianHQ/Resources/Ros2VehicleBridge/guardian_ros2_vehicle_bridge/config/: nav2_training_params.yaml  vehicles.example.yaml
Sources/GuardianHQ/Resources/Ros2VehicleBridge/guardian_ros2_vehicle_bridge/guardian_ros2_vehicle_bridge/: __init__.py  aerostack2_integration.py  autonomy_planner_coordinator.py  autonomy_planner_kind.py  command_extension_points.py  connection_registry.py  connection_state.py  geodetic_path_planner.py  health_cli.py  json_emit.py  multi_vehicle_bridge.py  nav2_integration.py  (+7 more)
(+1146 files in other folders)
